# scaffold

./: .env.local  .env.remote  .gitignore  Dockerfile  Procfile  README.md  api.py  cli.py  main.py  pipeline.py  pyproject.toml  requirements.txt  startup.py
bulk-up/: README.md  pyproject.toml
bulk-up/src/bulk_up/: dataset_to_inputs.py  generate_hospital_level_sandbox_data.py  generate_random_performance_data.py  generate_sandbox_data.py  history_extractor.py  json_to_new_json.py  json_to_tabular_data.py  knowledge_base_generator.py  log_to_data.py  prepare_csv_inputs.py
context/1.0/: context.jsonld
data ingestion model/: README.md
data ingestion model/examples/: ComparatorMeasureReport.csv  Preference.csv
data ingestion model/sandbox examples/: ComparatorMeasureReport.csv  MessageHistory.csv  PerformanceMeasureReport.csv  PractitionerRole.csv  Preference.csv  config.json
data ingestion model/sandbox examples/JSON Messages/: input_03a63289-4740-465b-81d4-706ad24b1592.json  input_086b8d65-16ec-4ecf-9fbd-195f79e161c4.json  input_0b4f8851-6f95-44a0-a771-44959993ea4b.json  input_0c123851-cf00-498b-a343-e163318736f7.json  input_0d8638ac-a9f1-4454-bb06-7afa2ca886a5.json  (+95 more)
data ingestion model/sandbox generator/: ComparatorMeasureReport.py  MessageHistory.py  PerformanceMeasureReport.py  PractitionerRole_hospital_level.py  Preference.py  TabularToJSON.py  utils.py
esteemer/: utils.py
sandbox/: README.md
scaffold/: api.py  cli.py  context.py  pipeline.py  startup.py
scaffold-sdk/: README.md  pyproject.toml
scaffold-sdk/src/scaffold_sdk/: __init__.py  esteemer.py
scaffold/bitstomach/: bitstomach.py
scaffold/candidate_pudding/: candidate_pudding.py
scaffold/esteemer/: esteemer.py  utils.py
scaffold/pictoralist/: pictoralist.py
scaffold/utils/: __init__.py  cli_utils.py  graph_operations.py  settings.py  utils.py
src/: api.py  cli.py  context.py  pipeline.py  startup.py
src/bitstomach/: bitstomach.py
src/candidate_pudding/: candidate_pudding.py
src/esteemer/: README.md  esteemer.py  mpm_candidate_selector.py  mpm_prioritization_algorithm.py  random_candidate_selector.py
src/models/: __init__.py  measure.py  measure_catalog.py
src/pictoralist/: pictoralist.py
src/utils/: __init__.py  graph_operations.py  settings.py  utils.py
tests/bitstomach/: test_achievements.py  test_achievements_over_periods.py  test_approach.py  test_comparisons.py  test_comparisons_r.py  test_extract_signals.py  test_loss.py  test_signal.py  test_trends.py  test_trends_over_periods.py  test_trends_r.py
tests/candidate_pudding/: test_acceptable_by.py  test_create.py
tests/esteemer/: conftest.py  test_esteemer.py  test_esteemer_over_periods.py  test_history.py  test_history_over_periods.py  test_utils.py
tests/namespace/: test_aliasing_DNS.py
tests/signal_tests/: test_trend.py
utils/namespace/: _PSDO.py  _SLOWMO.py
(+234 files in other folders)
