[tool.poetry]
name = "scaffold"
version = "1.3"
description = ""
authors = ["Zach Landis-Lewis <zachll@umich.edu>"]
readme = "README.md"
packages = [{ include = "scaffold" }]


[tool.poetry.dependencies]
python = "^3.13,<3.14"
pandas = "^2.2.3"
fastapi = "^0.115.12"
rdflib = "^7.1.4"
matplotlib = "^3.10.1"
psutil = "^7.0.0"
loguru = "^0.7.3"
requests-file = "^2.1.0"
python-decouple = "^3.8"
pyyaml = "^6.0.2"
gunicorn = "^23.0.0"
typer = "^0.15.2"

[tool.poetry.group.dev.dependencies]
python-slugify = "^8.0.4"
decoy = "^2.1.2"
poethepoet = "^0.34.0"
ruff = "^0.11.6"
pytest = "^8.3.5"
uvicorn = "^0.34.2"

[tool.poetry.scripts]
pipeline = "scaffold.cli:cli"

[tool.ruff.lint]
extend-select = ["I", "C901"] # sort imports 
mccabe.max-complexity = 5

[tool.poe.tasks]
ruff = [{ cmd = "ruff check --fix --exit-zero" }, { cmd = "ruff format" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
