[project]
name = "scaffold"
version = "2.1.4"
description = ""
readme = "README.md"
authors = [
  { name = "Zach Landis-Lewis", email = "zachll@umich.edu" }
]
requires-python = ">=3.12,<3.14"

dependencies = [
  "pandas>=2.2.3,<3.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "rdflib>=7.1.4,<8.0.0",
  "matplotlib>=3.10.1,<4.0.0",
  "psutil>=7.0.0,<8.0.0",
  "loguru>=0.7.3,<1.0.0",
  "requests-file>=2.1.0,<3.0.0",
  "python-decouple>=3.8,<4.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "typer>=0.15.2,<1.0.0",
  "orjson>=3.10.18,<4.0.0",
  "uvicorn>=0.34.2,<1.0.0",
  "gunicorn>=23.0.0,<24.0.0",
  "dotenv>=0.9.9,<1.0.0",
  "scaffold-sdk",
]

[project.entry-points."scaffold.esteemer"]
mpm_candidate_selector = "src.esteemer.mpm_candidate_selector:MPM_candidate_selector"
random_candidate_selector = "src.esteemer.random_candidate_selector:Random_candidate_selector"

[tool.setuptools.packages.find]
include  = ["src*"]

[project.scripts]
pipeline = "src.cli:cli"

[tool.ruff.lint]
extend-select = ["I", "C901"]
mccabe.max-complexity = 5

[tool.uv.workspace]
members = [
    "scaffold-sdk",
]

[tool.uv.sources]
scaffold-sdk = { workspace = true }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.12",
    "python-slugify>=8.0.4,<9.0.0",
    "decoy>=2.1.2,<3.0.0",
]
